Conexiunea cu baza de date; SELECT / UPDATE la baza de date (Profil);

--- a/jtds-1.3.1-dist/html/typemap.html
+++ b/jtds-1.3.1-dist/html/typemap.html
@@ -109,7 +109,7 @@
 <td>&nbsp;&nbsp;char</td><td>java.lang.String</td><td>CHAR</td><td>&nbsp;</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;varchar</td><td>java.lang.String</d><td>VARCHAR</td><td>&nbsp;</td>
+<td>&nbsp;&nbsp;varchar</td><td>java.lang.String</td><td>VARCHAR</td><td>&nbsp;</td>
 </tr>
 <tr>
 <td>&nbsp;&nbsp;nchar</td><td>java.lang.String</td><td>CHAR</td><td>&nbsp;</td>
